<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.leon.heroesgathering.DanGradingActivity">

    <TextView
        android:text="@string/DanGrading"
        android:layout_centerHorizontal="true"
        android:textSize="55dp"
        android:id="@+id/textView"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:layout_weight="0.89"
        android:textColor="#ffff2e80"
        android:textIsSelectable="false" />
    <View
        android:layout_height="2px"
        android:background="#ff000000"
        android:layout_width="fill_parent"
        android:layout_alignBottom="@+id/textView"
        android:layout_alignParentStart="true"
        android:id="@+id/textView2"></View>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:text="@string/Challenger"
        android:id="@+id/button11"
        android:layout_gravity="left|bottom"
        android:background="#ff34ff45"
        android:textSize="45dp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:textStyle="italic"
        android:textColor="#ff8b1bff"
        android:layout_marginTop="5dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:text="@string/AscendedMaster"
        android:id="@+id/button12"
        android:layout_gravity="left|bottom"
        android:background="#ffffea4e"
        android:textSize="45dp"
        android:textStyle="italic"
        android:textColor="#ff4eaeff"
        android:layout_below="@+id/button11"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:text="@string/Diamond"
        android:id="@+id/button13"
        android:layout_gravity="left|bottom"
        android:background="#ff99ccff"
        android:textSize="45dp"
        android:textStyle="italic"
        android:textColor="#ffff6ac2"
        android:layout_below="@+id/button12"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:text="@string/Platnum"
        android:id="@+id/button14"
        android:layout_gravity="left|bottom"
        android:background="#ffd25fff"
        android:textSize="45dp"
        android:textStyle="italic"
        android:textColor="#ff65ff26"
        android:layout_below="@+id/button13"
        android:layout_centerHorizontal="true" />
    <Button
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:text="@string/Gold"
        android:id="@+id/button15"
        android:layout_gravity="left|bottom"
        android:background="#ff68f3ff"
        android:textSize="45dp"
        android:textStyle="italic"
        android:textColor="#ffff2a17"
        android:layout_below="@+id/button14"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:text="@string/Silver"
        android:id="@+id/button16"
        android:layout_gravity="left|bottom"
        android:background="#ff91ff9d"
        android:textSize="45dp"
        android:textStyle="italic"
        android:textColor="#ffff980b"
        android:layout_below="@+id/button15"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:text="@string/Bronze"
        android:id="@+id/button17"
        android:layout_gravity="left|bottom"
        android:background="#ff3f93ff"
        android:textSize="45dp"
        android:textStyle="italic"
        android:textColor="#fffffdbd"
        android:layout_below="@+id/button16"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
