<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <Button
        android:layout_width="82dp"
        android:layout_height="wrap_content"
        android:text="@string/buttonSearch"
        android:id="@+id/buttonSearch"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/buttonGroups" />

    <Button
        android:layout_width="82dp"
        android:layout_height="wrap_content"
        android:text="@string/buttonGroups"
        android:id="@+id/buttonGroups"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="84dp"
        android:layout_height="wrap_content"
        android:text="@string/buttonFriends"
        android:id="@+id/buttonFriends"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/buttonSearch" />


    <Button
        android:layout_width="84dp"
        android:layout_height="wrap_content"
        android:text="@string/buttonMe"
        android:id="@+id/buttonMe"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <fragment
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp"
        android:name="android.app.ListFragment"
        android:id="@+id/fragment" />

</RelativeLayout>
