<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.leon.heroesgathering.AreaActivity">

    <TextView
        android:text="@string/Area"
        android:layout_centerHorizontal="true"
        android:textSize="55dp"
        android:id="@+id/textView"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:layout_weight="0.89"
        android:textColor="#ffff2e80"
        android:textIsSelectable="false"
        android:layout_alignTop="@+id/textView" />
    <View
        android:layout_height="2px"
        android:background="#ff000000"
        android:layout_width="fill_parent"
        android:layout_alignBottom="@+id/textView"
        android:layout_alignParentStart="true"
        android:id="@+id/textView2"></View>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:text="@string/Ionian"
        android:id="@+id/button4"
        android:layout_gravity="left|bottom"
        android:background="#ff34ff45"
        android:textSize="45dp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:textStyle="italic"
        android:textColor="#ff8b1bff"
        android:layout_marginTop="5dp"/>


    <Button
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:text="@string/Freljord"
        android:id="@+id/button5"
        android:layout_gravity="left|bottom"
        android:background="#ffffea4e"
        android:textSize="45dp"
        android:textStyle="italic"
        android:textColor="#ff4eaeff"
        android:layout_below="@+id/button4"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:text="@string/Demacia"
        android:id="@+id/button6"
        android:layout_gravity="left|bottom"
        android:background="#ff99ccff"
        android:textSize="45dp"
        android:textStyle="italic"
        android:textColor="#ffff6ac2"
        android:layout_below="@+id/button5"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:text="@string/Piltover"
        android:id="@+id/button7"
        android:layout_gravity="left|bottom"
        android:background="#ffd25fff"
        android:textSize="45dp"
        android:textStyle="italic"
        android:textColor="#ff65ff26"
        android:layout_below="@+id/button6"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:text="@string/Noxus"
        android:id="@+id/button8"
        android:layout_gravity="left|bottom"
        android:background="#ff68f3ff"
        android:textSize="45dp"
        android:textStyle="italic"
        android:textColor="#ffff2a17"
        android:layout_below="@+id/button7"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:text="@string/Zaun"
        android:id="@+id/button9"
        android:layout_gravity="left|bottom"
        android:background="#ff91ff9d"
        android:textSize="45dp"
        android:textStyle="italic"
        android:textColor="#ffff980b"
        android:layout_below="@+id/button8"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:text="@string/JustRule"
        android:id="@+id/button10"
        android:layout_gravity="left|bottom"
        android:background="#ff95ff10"
        android:textSize="45dp"
        android:textStyle="italic"
        android:textColor="#ff5812ff"
        android:layout_below="@+id/button9"
        android:layout_centerHorizontal="true" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_above="@+id/textView2"
        android:layout_alignEnd="@id/button10"
        android:layout_alignStart="@id/textView" />

</RelativeLayout>
