<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.leon.heroesgathering.SearchFragment">


    <TextView
        android:text="@string/Search"
        android:layout_centerHorizontal="true"
        android:textSize="55dp"
        android:id="@+id/textView"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:layout_weight="0.89"
        android:textColor="@android:color/holo_blue_bright"
        android:textIsSelectable="false" />
    <View
        android:layout_height="2px"
        android:background="#ff000000"
        android:layout_width="fill_parent"
        android:layout_alignBottom="@+id/textView"
        android:layout_alignParentStart="true"
        android:id="@+id/textView2"></View>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:text="@string/Search1"
        android:id="@+id/button"
        android:layout_gravity="left|bottom"
        android:background="#ff34ff45"
        android:textSize="45dp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:textStyle="italic"
        android:textColor="#ffff6ac2"
        android:layout_marginTop="10dp"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:text="@string/Search2"
        android:id="@+id/button2"
        android:layout_gravity="left|top"
        android:background="#ffffe725"
        android:textSize="30dp"
        android:textStyle="italic"
        android:textColor="#ff2bffc7"
        android:layout_below="@+id/button"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:text="@string/Search3"
        android:id="@+id/button3"
        android:background="#ffa147ff"
        android:textSize="40dp"
        android:textStyle="italic"
        android:textColor="#ff1fffdc"
        android:layout_below="@+id/button2"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />


</RelativeLayout>
